# Freccia

./: .gitignore  CMakeLists.txt  README.md
include/Freccia/: All.hpp
include/Freccia/arrowhead/: ArrowheadEigenSolver.hpp
include/Freccia/banded/: BandedEigenSolver.hpp
include/Freccia/bdc/: BDCEigenSolver.hpp
include/Freccia/broad_arrowhead/: BroadArrowheadEigenSolver.hpp
include/Freccia/deflation/: type1.hpp  type2.hpp
include/Freccia/dpr1/: DPR1EigenSolver.hpp
include/Freccia/dprk/: DPRKEigenSolver.hpp
include/Freccia/matrix/: arrangement.hpp  arrowhead.hpp  dpr1.hpp  householder_deflation.hpp  matrix.hpp
include/Freccia/options/: options.hpp
include/Freccia/utils/: env.hpp  matrix_storage.hpp  numeric.hpp  root_finding.hpp  utils.hpp
src/arrowhead/: eigh.cpp  eigh_k.cpp  recastR.cpp  recomputeEigenvalue.cpp  shiftInvert.cpp  solveSecularEQ.cpp  vect.cpp
src/banded/: dsbevd.cpp  make_banded.cpp
src/bdc/: block_divide_and_conquer.cpp  merge.cpp
src/broad_arrowhead/: eigh.cpp
src/dpr1/: eigh.cpp  eigh_k.cpp  recastR.cpp  recomputeEigenvalue.cpp  shiftInvert.cpp  solveSecularEQ.cpp  type1Deflation.cpp  type2Deflation.cpp  vect.cpp
src/dprk/: DPRKEigenSolver.cpp  DPRKeigh.cpp
src/utils/: banded_make_compressed.cpp  env.cpp  matrix_storage.cpp  utils.cpp
tests/: CMakeLists.txt
tests/src/: Arrowhead_tests.cpp  BDC_tests.cpp  Banded_tests.cpp  Broad_arrowhead_tests.cpp  DPR1_tests.cpp  DPRK_test.cpp
